--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@ html {
     background-color: black;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+}
+
 h1 {
     display: flex;
     justify-content: center;
@@ -16,8 +21,8 @@ h1 {
 }
 
 .potatoImg {
-    width: 200px;  
-    height: 200px; 
+    width: 300px;  
+    height: 300px; 
     border-radius: 50%;
     object-fit: cover; 
     display: block; 
@@ -42,6 +47,12 @@ h2 {
     color: white;
 }
 
+.howToContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .usageParagraph {
     display: flex;
     justify-content: center;
@@ -49,13 +60,14 @@ h2 {
     color:white;
     font-size: 24px;
     padding: 5%;
+    width: 100;
+    max-width: 950px;
 }
 
 .resultsContainer {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     max-height: 800px;
-    max-width: 100%;
 }
 
 .results {
@@ -64,13 +76,15 @@ h2 {
     background-image: linear-gradient(180deg, #730303, transparent);
     color: white;
     padding-bottom: 30px;
+    width: 100%;
+    max-width: 950px;
 }
 
 .poster {
     display: flex;
     justify-content: center;
-    height: 300px;
-    width: 250px;
+    height: 600px;
+    width: 400px;
 }
 
 .posterAndTitle {
